--- a/app/views/partials/card.html
+++ b/app/views/partials/card.html
@@ -7,6 +7,25 @@
     </h6>
     <h6 class="card-subtitle mb-2 text-muted text-sm"><%= data.tglLahir %></h6>
     <p class="card-text"><%= data.alamat %></p>
-    <a href="/student" class="btn btn-primary btn-sm">Kembali</a>
+    <div class="d-flex align-items-center">
+      <a href="/student" class="btn btn-primary btn-sm">Kembali</a>
+      <a id="delete" class="btn btn-danger btn-sm ms-auto" data-nim="<%= data.nim %>">Delete</>
+      <a href="/student" class="btn btn-warning btn-sm ms-2">Update</a>
+    </div>
+    </div>
   </div>
 </div>
+
+
+<script>
+  const btnDelete = document.getElementById("delete")
+  
+
+  btnDelete.addEventListener('click',function() {
+    const nim = this.dataset.nim
+
+    fetch(`/student/details/${nim}`,{
+      method:"DELETE"
+    }).then((response) => response.json()).then((data) => window.location.href = data.redirect ).catch(err => console.log(err))
+  })
+</script>
