--- a/app/views/partials/table.html
+++ b/app/views/partials/table.html
@@ -33,7 +33,7 @@
         <td>
           <a
             href="/student/details/<%= student.nim %>"
-            class="btn btn-primary btn-sm"
+            class="btn btn-success btn-sm"
             >Details</a
           >
         </td>
