--- a/app/views/partials/card.html
+++ b/app/views/partials/card.html
@@ -10,7 +10,7 @@
     <div class="d-flex align-items-center">
       <a href="/student" class="btn btn-primary btn-sm">Kembali</a>
       <a id="delete" class="btn btn-danger btn-sm ms-auto" data-nim="<%= data.nim %>">Delete</>
-      <a href="/student" class="btn btn-warning btn-sm ms-2">Update</a>
+      <a href="/student/update/<%= data.nim %>" class="btn btn-warning btn-sm ms-2">Update</a>
     </div>
     </div>
   </div>
