fix flash message/fix bug

--- a/app/views/partials/card.html
+++ b/app/views/partials/card.html
@@ -5,7 +5,9 @@
     <h6 class="card-subtitle mb-2 text-muted text-primary">
       <%= data.jenisKelamin %>
     </h6>
-    <h6 class="card-subtitle mb-2 text-muted text-sm"><%= data.tglLahir %></h6>
+    <h6 class="card-subtitle mb-2 text-muted text-sm">
+      <%= moment(new Date(data.tglLahir).toLocaleString()) %>
+    </h6>
     <p class="card-text"><%= data.alamat %></p>
     <div class="d-flex align-items-center">
       <a href="/student" class="btn btn-primary btn-sm">Kembali</a>
