--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -5,13 +5,13 @@
     >
     <ul class="nav nav-pills">
       <li class="nav-item">
-        <a class="nav-link" href="/student">Mahasiswa</a>
+        <a class="nav-link<%= currentPath === "/student" ? ' active' : '' %>" href="/student">Mahasiswa</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Dosen</a>
+        <a class="nav-link<%= currentPath === "/lecturer" ? ' active' : '' %>" href="/dosen">Dosen</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Mata Kuliah</a>
+        <a class="nav-link<%= currentPath === "/lectures" ? ' active' : '' %>" href="#">Mata Kuliah</a>
       </li>
     </ul>
   </nav>
