--- a/app/views/student/index.html
+++ b/app/views/student/index.html
@@ -1,13 +1,16 @@
 <div class="my-4">
-  <div>
-    <% if (messages.success && messages.success.length > 0) { %>
-    <div class="success">
-      <% messages.success.forEach(message => { %>
-      <p><%= message %></p>
-      <% }) %>
-    </div>
-    <% } %>
+  <% if (messages && messages.length > 0) { %>
+  <div
+    class="alert alert-<%= messages[0] %> alert-dismissible fade show"
+    role="alert"
+  >
+    <strong><%= messages[1] %></strong>
+    <button
+      type="button"
+      class="btn-close"
+      data-bs-dismiss="alert"
+      aria-label="Close"
+    ></button>
   </div>
-
-  <%- include('../partials/table.html',{ data }) %>
+  <% } %> <%- include('../partials/table.html',{ data }) %>
 </div>
