modification-ui/fixing-bug/add-more/validation/add-feature-transaction

--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -8,10 +8,13 @@
         <a class="nav-link<%= currentPath === "/student" ? ' active' : '' %>" href="/student">Mahasiswa</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link<%= currentPath === "/lecturer" ? ' active' : '' %>" href="/dosen">Dosen</a>
+        <a class="nav-link<%= currentPath === "/lecturer" ? ' active' : '' %>" href="/lecturer">Dosen</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link<%= currentPath === "/lectures" ? ' active' : '' %>" href="#">Mata Kuliah</a>
+        <a class="nav-link<%= currentPath === "/subject" ? ' active' : '' %>" href="/subject">Mata Kuliah</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link<%= currentPath === "/lectures" ? ' active' : '' %>" href="/lectures">Perkuliahan</a>
       </li>
     </ul>
   </nav>
