--- a/app/views/student/create.html
+++ b/app/views/student/create.html
@@ -2,5 +2,5 @@
   <header class="mb-4">
     <h3>Tambah Mahasiswa</h3>
   </header>
-  <%- include('../partials/form.html',{data :null}) %>
+  <%- include('../partials/studentForm.html',{data :null}) %>
 </div>
