--- a/app/views/student/update.html
+++ b/app/views/student/update.html
@@ -2,5 +2,5 @@
   <header class="mb-4">
     <h3>Update Mahasiswa</h3>
   </header>
-  <%- include('../partials/form.html',{data}) %>
+  <%- include('../partials/studentForm.html',{data}) %>
 </div>
