--- a/app/views/lecturer/index.html
+++ b/app/views/lecturer/index.html
@@ -12,5 +12,5 @@
       aria-label="Close"
     ></button>
   </div>
-  <% } %> <%- include('../partials/studentTable.html',{ data }) %>
+  <% } %> <%- include('../partials/lecturerTable.html',{ data }) %>
 </div>
